[gd_scene load_steps=7 format=3 uid="uid://cbrpaew3hshex"]

[ext_resource type="Script" path="res://game/main.gd" id="1_oqv2r"]
[ext_resource type="Script" path="res://game/lib/FPS.gd" id="2_2ls0m"]
[ext_resource type="VideoStream" path="res://assets/video/Globe.ogv" id="3_mibxd"]
[ext_resource type="PackedScene" uid="uid://c07p0xcm0iks3" path="res://game/music.tscn" id="4_515qp"]

[sub_resource type="LabelSettings" id="LabelSettings_mhmxo"]
shadow_color = Color(0, 0, 0, 0.509804)

[sub_resource type="LabelSettings" id="LabelSettings_magq3"]
font_size = 64
shadow_size = 15
shadow_color = Color(0, 0, 0, 0.588235)
shadow_offset = Vector2(-5, 3)

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oqv2r")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FPS" type="Label" parent="CanvasLayer"]
offset_left = 9.0
offset_top = 7.0
offset_right = 49.0
offset_bottom = 30.0
script = ExtResource("2_2ls0m")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="CanvasLayer"]
z_index = -1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("3_mibxd")
autoplay = true
expand = true
loop = true

[node name="VB_MainMenu" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 439.0
offset_top = 286.0
offset_right = 648.0
offset_bottom = 594.0

[node name="Button_SP" type="Button" parent="CanvasLayer/VB_MainMenu"]
layout_mode = 2
text = "SINGLEPLAYER"

[node name="Button_MP" type="Button" parent="CanvasLayer/VB_MainMenu"]
layout_mode = 2
text = "MULTIPLAYER"

[node name="Button_Editor" type="Button" parent="CanvasLayer/VB_MainMenu"]
layout_mode = 2
text = "WORLD EDITOR"

[node name="Button_Options" type="Button" parent="CanvasLayer/VB_MainMenu"]
layout_mode = 2
text = "OPTIONS"

[node name="Button_Exit" type="Button" parent="CanvasLayer/VB_MainMenu"]
layout_mode = 2
text = "EXIT"

[node name="Label_Authors" type="Label" parent="CanvasLayer"]
offset_left = 993.0
offset_top = 569.0
offset_right = 1131.0
offset_bottom = 627.0
text = "Openpower Team"
label_settings = SubResource("LabelSettings_mhmxo")
horizontal_alignment = 2
vertical_alignment = 2

[node name="Label_GameName" type="Label" parent="CanvasLayer"]
offset_left = 338.0
offset_top = 89.0
offset_right = 741.0
offset_bottom = 177.0
text = "OPENPOWER"
label_settings = SubResource("LabelSettings_magq3")
horizontal_alignment = 1
uppercase = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(546, 321)
offset = Vector2(1850, 1300)
zoom = Vector2(0.5, 0.5)

[node name="AudioStreamPlayer" parent="." instance=ExtResource("4_515qp")]

[connection signal="button_up" from="CanvasLayer/VB_MainMenu/Button_SP" to="." method="_on_singleplayer_button_up"]
[connection signal="button_up" from="CanvasLayer/VB_MainMenu/Button_MP" to="." method="_on_multiplayer_button_up"]
[connection signal="button_up" from="CanvasLayer/VB_MainMenu/Button_Editor" to="." method="_on_world_editor_button_up"]
[connection signal="button_up" from="CanvasLayer/VB_MainMenu/Button_Options" to="." method="_on_options_button_up"]
[connection signal="button_up" from="CanvasLayer/VB_MainMenu/Button_Exit" to="." method="_on_exit_button_up"]
